# finch-examples

./: README.md
example-0/: README.md  shellcode  shellcode-bin-sh  solve.py
example-0/c-source/: build.sh  example-0  example-0.c
example-0/example/: Cargo.toml
example-0/example/src/: main.rs
